@@ -928,7 +928,7 @@ public class View implements java.io.Serializable {
 		}
 	}
 	
-	private boolean isMemberFromEntityReference(String memberName) { // tmr
+	private boolean isMemberFromEntityReference(String memberName) { 
 		if (!memberName.contains(".")) return false;
 		String subviewName = memberName.split("\\.")[0];
 		try {
@@ -7110,7 +7110,7 @@ public class View implements java.io.Serializable {
 	public Collection<String> getDependentCalculationPropertiesNamesFor(String qualifiedName) { 
 		Collection<String> result = new ArrayList<>(); 
 		for (MetaProperty property: getMetaPropertiesQualified()) {
-			if (isMemberFromEntityReference(property.getName())) continue; // tmr 
+			if (isMemberFromEntityReference(property.getName())) continue;  
 			if (property.usesForCalculation(qualifiedName)) {
 				result.add(property.getName()); 
 			}
