@@ -9,7 +9,6 @@ import org.openxava.annotations.*;
 import lombok.*;
  
 /**
- * tmr
  * 
  * @author Javier Paniza
  */
