@@ -3,7 +3,6 @@ package org.openxava.test.tests.bymodule;
 import org.openxava.tests.*;
 
 /**
- * tmr
  * 
  * @author Javier Paniza
  */
@@ -18,8 +17,7 @@ public class OrderDocumentTest extends ModuleTestBase {
 		getWebClient().getOptions().setCssEnabled(true);
 		execute("List.viewDetail", "row=0");
 		assertValue("year", "2024");
-		assertFalse(getHtmlPage().getElementById("xava_loading").isDisplayed());
-		
+		assertFalse(getHtmlPage().getElementById("xava_loading").isDisplayed());		
 	}
 				
 }
